--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/LosM-ro/cs-361-worth#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "got": "^11.8.2",
         "nodemon": "^2.0.14"
     }
 }
